Fixed text issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,7 @@
         </a>
       </div>
       <div class="footer__social">
+        <a>{{ 'SOCIAL_MEDIA' | translate }}</a><br><br>
         <a class="footer__social__link" href="https://www.facebook.com/ExtinctionRebellionCanada/">
           <i class="social-icon social-icon--facebook fa fa-facebook"></i> Facebook
         </a>
