--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -9,7 +9,7 @@
   {{'ACTION_NETWORK'|translate}}
   <br><br><br><br>
     <a mat-button style=background:#3aaa37;color:white;margin:1em href="https://actionnetwork.org/forms/join-the-rebellion-3/?fbclid=IwAR0RbLD_oqYazl874FLCqcHvXlSDCUS7AmCHWbs4iSkVTljSShmFbmHluRE">{{'SIGN_CANADA'|translate}}</a>
-    <a mat-button style=background:#3aaa37;color:white;margin:1em href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link">{{'SIGN_QUEBEC'|translate}}</a>
+    <a mat-button style=background:#3aaa37;color:white;margin:1em href="https://actionnetwork.org/forms/sengager-avec-extinction-rebellion-3?fbclid=IwAR3LysC7rGeL9D-lrmmEdgRe5yvLA9FLupRr-YN5HgKsgEKox8wwLhGKWKc">{{'SIGN_QUEBEC'|translate}}</a>
   </div>
 <br><br>
 
