--- a/src/app/principles/principles.component.html
+++ b/src/app/principles/principles.component.html
@@ -1,5 +1,5 @@
 
-<div class="title principles__title">
+<div style=height:15em class="title principles__title">
   <h1>{{'PRINCIPLES_TITLE'|translate}}</h1>
 </div>
 
@@ -10,7 +10,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 1</h3></td>
       <td>
         <h3>{{'PRINCIPLE_1'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_1_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -18,7 +20,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 2</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_2'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_2_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -26,7 +30,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 3</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_3'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_3_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -34,7 +40,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 4</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_4'|translate}}</h3>
-        <p>{{'PRINCIPLE_4_TEXT'|translate}}</p>
+        <br>
+        <p>{{'PRINCIPLE_4_TEXT'|translate}}</p>        
+        <br>
       </td>
     </tr>
 
@@ -42,7 +50,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 5</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_5'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_5_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -50,7 +60,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 6</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_6'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_6_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -58,7 +70,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 7</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_7'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_7_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -66,7 +80,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 8</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_8'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_8_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -74,7 +90,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 9</h3></td>
       <td>
         <h3>  {{'PRINCIPLE_9'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_9_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
 
@@ -82,7 +100,9 @@
       <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 10</h3></td>
       <td>
         <h3>{{'PRINCIPLE_10'|translate}}</h3>
+        <br>
         <p>{{'PRINCIPLE_10_TEXT'|translate}}</p>
+        <br>
       </td>
     </tr>
   </table>
