--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -25,7 +25,7 @@
 <div class="action-section">
 
     <div class="text-center">
-        <a class="action-link" href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link" target="_blank">
+        <a class="action-link" href="https://actionnetwork.org/forms/sengager-avec-extinction-rebellion-3?fbclid=IwAR3LysC7rGeL9D-lrmmEdgRe5yvLA9FLupRr-YN5HgKsgEKox8wwLhGKWKc" target="_blank">
             Rejoignez-nous!
         </a>
         <span>(ou contactez-nous à <a class="text-yellow text-bold" href="mailto:outreach.xrqc@protonmail.com">outreach.xrqc@protonmail.com</a>)</span>
@@ -103,8 +103,8 @@
             </a>
         </li>
         <li>
-            <a class="social-link" href="https://www.instagram.com/extinctionrebellion/">
-                <i class="social-icon social-icon--instagram fa fa-instagram"></i> @extinctionrebellion
+            <a class="social-link" href="https://www.instagram.com/extinctionrebellion.quebec">
+                <i class="social-icon social-icon--instagram fa fa-instagram"></i> @extinctionrebellion.quebec
             </a>
         </li>
     </ul>
