--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,19 +20,19 @@
 <div class=home__boxes>
 
   <div class=home__boxes__row>
-    <div class="home__boxes__box home__boxes__box--text"><h3>{{'BLUE_1'|translate}}</h3></div>
+    <div style=color:white;font-size:20px class="home__boxes__box home__boxes__box--text"><h4>{{'BLUE_1'|translate}}</h4></div>
     <div class="home__boxes__box home__boxes__box--img home__boxes__box--greta"></div>
+    <div style=color:white;font-size:20px class="home__boxes__box home__boxes__box--text"><h4>{{'BLUE_3'|translate}}</h4></div>
   </div>
 
   <div class=home__boxes__row>
     <div class="home__boxes__box home__boxes__box--img home__boxes__box--rebel"></div>
-    <div class="home__boxes__box home__boxes__box--text"><h3>{{'BLUE_3'|translate}}</h3></div>
-  </div>
-
-  <div class=home__boxes__row>
-    <div class="home__boxes__box home__boxes__box--text"><h3>{{'BLUE_2'|translate}}</h3></div>
+    <div style=color:white;font-size:20px class="home__boxes__box home__boxes__box--text"><h4>{{'BLUE_2'|translate}}</h4></div>
     <div class="home__boxes__box home__boxes__box--img home__boxes__box--bye"></div>
   </div>
+
+  <!-- <div class=home__boxes__row>
+  </div> -->
 
 </div>
 
