update email of xr quebec

--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -28,7 +28,7 @@
         <a class="action-link" href="https://actionnetwork.org/forms/sengager-avec-extinction-rebellion-3?fbclid=IwAR3LysC7rGeL9D-lrmmEdgRe5yvLA9FLupRr-YN5HgKsgEKox8wwLhGKWKc" target="_blank">
             Rejoignez-nous!
         </a>
-        <span>(ou contactez-nous à <a class="text-yellow text-bold" href="mailto:outreach.xrqc@protonmail.com">outreach.xrqc@protonmail.com</a>)</span>
+        <span>(ou contactez-nous à <a class="text-yellow text-bold" href="mailto:outreach.xrqc@gmail.com">outreach.xrqc@gmail.com</a>)</span>
     </div>
 
 </div>
