quebec: include introduction document

--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -18,7 +18,11 @@
     <h2>S'ENGAGER</h2>
     <p>
         Vous avez envie de rejoindre notre équipe d’organisation et faire avancer les choses ? <br>
-        Participer à organiser une action, former un groupe local sont autant de manières de s’engager pour lesquelles le temps et la variété de talents dont vous disposez sont appréciés.
+        Participer à organiser une action, former un groupe local sont autant de manières de s’engager
+        pour lesquelles le temps et la variété de talents dont vous disposez sont appréciés. <br/>
+        Un document d'introduction pour ceux qui veulent s'impliquer est disponible
+        <a href="https://docs.google.com/document/d/11VoahHVDpfDKr49vfB-yoycSexQ_PYT2DyNarbF63y8/edit?usp=sharing">ici</a>
+        (english version <a href="https://docs.google.com/document/d/1Shw5gXF_Ix0a8MSFNg6drJSI7s1VNWoHFEHjT_JbCn4/edit?usp=sharing">here</a>).
     </p>
 
 </div>
