proper changes to quebec.component.html

--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -1,5 +1,5 @@
 <div class="title quebec__title">
-    <h1 class="text-center">XR QUÉBEC</h1>
+    <h1 class="text-center">{{'QC_TITLE_1'|translate}}</h1>
 </div>
 <div class="section section--paddingSmall">
 
@@ -19,7 +19,11 @@
 
     <h2>{{'QC_TITLE_2'|translate}}</h2>
     <p>
-      {{'QC_TEXT_2'|translate}}
+      {{'QC_TEXT_2'|translate}}<br>
+      {{'QC_TEXT_2.1'|translate}}
+      en francais <a href="https://docs.google.com/document/d/11VoahHVDpfDKr49vfB-yoycSexQ_PYT2DyNarbF63y8/edit?usp=sharing">ici</a>
+      , in english <a href="https://docs.google.com/document/d/1Shw5gXF_Ix0a8MSFNg6drJSI7s1VNWoHFEHjT_JbCn4/edit?usp=sharing">here</a>.
+
     </p>
 
 </div>
@@ -27,10 +31,10 @@
 
     <div class="text-center">
         <a class="action-link" href="https://actionnetwork.org/forms/sengager-avec-extinction-rebellion-3?fbclid=IwAR3LysC7rGeL9D-lrmmEdgRe5yvLA9FLupRr-YN5HgKsgEKox8wwLhGKWKc" target="_blank">
-          {{'QC_TITLE_2.1'|translate}}
+          {{'QC_TITLE_2.5'|translate}}
 
         </a>
-        <span>{{'QC_TEXT_2.1'|translate}}
+        <span>{{'QC_TEXT_2.5'|translate}}
           <a class="text-yellow text-bold" href="mailto:outreach.xrqc@gmail.com">
             outreach.xrqc@gmail.com
           </a>)</span>
@@ -49,7 +53,7 @@
 
     <div class="text-center">
         <a class="action-link" href="https://actionnetwork.org/fundraising/soutenez-financierement-extinction-rebellion-quebec/" target="_blank">
-          {{'QC_TEXT_3.1'|translate}}
+          {{'QC_TEXT_3.5'|translate}}
 
         </a>
     </div>
