--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -1,5 +1,124 @@
-
+<div class="title quebec__title">
+    <h1 class="text-center">{{'QC_TITLE_1'|translate}}</h1>
+</div>
+<div class="section section--paddingSmall">
+ 
+    <h2>{{'QC_TITLE_1.1'|translate}}<span class="text-green">{{'QC_TITLE_1.2'|translate}}</span></h2>
+ 
+    <p>
+      {{'QC_TEXT_1'|translate}}
+    </p>
+ 
+    <!-- <h2>NOUS EXIGEONS :</h2>
+    <ol class="numbered-list">
+        <li>La reconnaissance de la gravité et de l’urgence des crises écologiques actuelles et une communication honnête sur le sujet.</li>
+        <li>La réduction immédiate des émissions de gaz à effet de serre pour atteindre la neutralité carbone en 2025, grâce à une réduction de la consommation et une descente énergétique planifiée. </li>
+        <li>L’arrêt immédiat de la destruction des écosystèmes océaniques et terrestres, à l’origine d’une extinction massive du monde vivant.</li>
+        <li>La création d’une assemblée citoyenne chargée de décider des mesures à mettre en place pour atteindre ces objectifs et garante d’une transition juste et équitable. </li>
+    </ol> -->
+ 
+    <h2>{{'QC_TITLE_2'|translate}}</h2>
+    <p>
       {{'QC_TEXT_2'|translate}}<br>
       {{'QC_TEXT_2.1'|translate}}
       en francais <a href="https://docs.google.com/document/d/11VoahHVDpfDKr49vfB-yoycSexQ_PYT2DyNarbF63y8/edit?usp=sharing">ici</a>
       , in english <a href="https://docs.google.com/document/d/1Shw5gXF_Ix0a8MSFNg6drJSI7s1VNWoHFEHjT_JbCn4/edit?usp=sharing">here</a>.
+  </p>
+ 
+</div>
+<div class="action-section">
+ 
+    <div class="text-center">
+        <a class="action-link" href="https://actionnetwork.org/forms/sengager-avec-extinction-rebellion-3?fbclid=IwAR3LysC7rGeL9D-lrmmEdgRe5yvLA9FLupRr-YN5HgKsgEKox8wwLhGKWKc" target="_blank">
+          {{'QC_TITLE_2.5'|translate}}
+ 
+        </a>
+        <span>{{'QC_TEXT_2.5'|translate}}
+          <a class="text-yellow text-bold" href="mailto:outreach.xrqc@gmail.com">
+            outreach.xrqc@gmail.com
+          </a>)</span>
+    </div>
+ 
+</div>
+<div class="section section--paddingSmall">
+ 
+    <h2>{{'QC_TITLE_3'|translate}}</h2>
+    <p>
+        {{'QC_TEXT_3'|translate}}
+      </p>
+ 
+</div>
+<div class="action-section">
+      <div class="text-center">
+        <a class="action-link" href="https://actionnetwork.org/fundraising/soutenez-financierement-extinction-rebellion-quebec/" target="_blank">
+          {{'QC_TEXT_3.5'|translate}}
+ 
+        </a>
+    </div>
+ 
+</div>
+<div class="section section--paddingSmall">
+ 
+    <h2>{{'QC_TITLE_4'|translate}}</h2>
+ 
+    <p>
+        {{'QC_TEXT_4.1'|translate}}
+      </p>
+ 
+    <!-- <p>
+        Imprimez une affiche. Ces fichiers sont disponibles en copyleft, merci d'indiquer la source «Extinction rébellion Québec» le cas échéant:
+    </p>
+ 
+    <ul>
+        <li><a href="https://extinctionrebellionmontreal.com/files/Extractivisme-print.pdf">Affiche 1 (L'extractivisme est un nihilisme)</a></li>
+        <li><a href="https://extinctionrebellionmontreal.com/files/Caterpillar-print.pdf">Affiche 2 (Les prochains c'est nous)</a></li>
+        <li><a href="https://extinctionrebellioncanada.com/files/Greta-Print-2.pdf"> Affiche 3 (Greta)</a></li>
+    </ul> -->
+      
+        <p>
+        {{'QC_TEXT_4.2'|translate}}
+      </p>
+    <p>
+        {{'QC_TEXT_4.3'|translate}}
+      </p>
+ 
+ 
+    <!-- <h2>Vidéos</h2>
+    <ul>
+        <li> <a href="https://www.youtube.com/watch?v=b2VkC4SnwY0&amp;t=2250s">Heading for extinction and what to do about it</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=EAmmUIEsN9A">School strike for climate - save the world by changing the rules | Greta Thunberg | TEDxStockholm</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=jAH3IQwHKag">Life inside Extinction Rebellion: 'We can't get arrested quick enough'</a></li>
+        <li> <a href="https://www.youtube.com/watch?v=q6I7wuLDkyA">Mouvement "Extinction Rebellion" : la désobéissance civile s'organise à Londres</a></li>
+        <li> <a href="https://www.ted.com/talks/chad_frischmann_100_solutions_to_climate_change">Ted Talk : 100 solutions au réchauffement climatique</a></li>
+    </ul> -->
+ 
+      
+        <h2>{{'QC_TITLE_5'|translate}}</h2>
+    <p>
+        <a href="mailto:presse.xrqc@protonmail.com">{{'QC_TEXT_5'|translate}}
+          </a>
+    </p>
+ 
+    <h2>{{'QC_TITLE_6'|translate}}</h2>
+ 
+    <ul class="quebec__social">
+        <li>
+            <a class="social-link" href="https://www.facebook.com/Extinction.Rebellion.QC/">
+                <i class="social-icon social-icon--facebook fa fa-facebook"></i> Extinction.Rebellion.QC
+            </a>
+        </li>
+        <li>
+            <a class="social-link" href="https://twitter.com/XR_Quebec">
+                <i class="social-icon social-icon--twitter fa fa-twitter"></i> @XR_Quebec
+            </a>
+        </li>
+        <li>
+            <a class="social-link" href="https://www.instagram.com/extinctionrebellion.quebec">
+                <i class="social-icon social-icon--instagram fa fa-instagram"></i> @extinctionrebellion.quebec
+            </a>
+        </li>
+    </ul>
+</div>
+ 
+ 
+ 
