--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -6,7 +6,7 @@
 
 <div style=text-align:center;margin-right:15%;margin-left:15%>
   <br><br>
-  <h2 style=color:rgb(59,56,71)>VIDEOS</h2>
+  <h2 style=color:rgb(59,56,71)>VIDEUS</h2>
   <br><br>
   <iframe style=margin-right:1em width="320" height="245" src="https://www.youtube.com/embed/b2VkC4SnwY0"></iframe>
   <iframe style=margin-right:1em width="320" height="245" src="https://www.youtube.com/embed/jAH3IQwHKag"></iframe>
